tests/paczka1/small_fuzzy/96879280.err
Error in line 5: wb8vDtL 832 48,7
Error in line 11: oC1czNjfrW A915 36,0
